# pytomatiza

Back-end/: .env.example  pyproject.toml
Back-end/src/pytomatiza/: config.py
Back-end/src/pytomatiza/application/use_cases/workflows/: create_nlp_workflow.py
Back-end/src/pytomatiza/domain/services/: __init__.py  llm_provider.py
Back-end/src/pytomatiza/infrastructure/ai/: __init__.py  gemini_provider.py  ollama_provider.py  provider_factory.py
Back-end/src/pytomatiza/infrastructure/db/: session.py
Front-end/: next.config.ts  temp-source-map.js
Front-end/messages/: ar.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  pt.json  ru.json  zh.json
Front-end/scripts/: check-english-text.js  fix-all-i18n.js  translate-missing.js
Front-end/src/app/: globals.css
Front-end/src/app/[locale]/: error.tsx  layout.tsx  not-found.tsx  page.tsx
Front-end/src/app/[locale]/(auth)/login/: page.tsx
Front-end/src/app/[locale]/(dashboard)/: layout.tsx
Front-end/src/app/[locale]/(dashboard)/agents/: AgentsContent.tsx  page.tsx
Front-end/src/app/[locale]/(dashboard)/architecture/: ArchitectureContent.tsx  page.tsx
Front-end/src/app/[locale]/(dashboard)/automations/: AutomationsContent.tsx  page.tsx
Front-end/src/app/[locale]/(dashboard)/communication/: CommunicationContent.tsx  page.tsx
Front-end/src/app/[locale]/(dashboard)/dashboard/: DashboardContent.tsx  page.tsx
Front-end/src/app/[locale]/(dashboard)/data/: DataContent.tsx  page.tsx
Front-end/src/app/[locale]/(dashboard)/documents/: DocumentsContent.tsx  page.tsx
Front-end/src/app/[locale]/(dashboard)/files/: FilesContent.tsx  page.tsx
Front-end/src/app/[locale]/(dashboard)/help/: page.tsx
Front-end/src/app/[locale]/(dashboard)/logs/: LogsContent.tsx  page.tsx
Front-end/src/app/[locale]/(dashboard)/media/: MediaContent.tsx  page.tsx
Front-end/src/app/[locale]/(dashboard)/settings/: page.tsx
Front-end/src/components/auth/: BrandPanel.tsx
Front-end/src/components/dashboard/: AgentCard.tsx
Front-end/src/components/layout/: AccentColorScript.tsx  AuraBackground.tsx  MobileMenu.tsx  ModulesDropdown.tsx  Navbar.tsx
Front-end/src/components/settings/: AccountPanel.tsx
Front-end/src/components/ui/: Button.tsx  LoginAlert.tsx
Front-end/src/lib/: api.ts
Front-end/src/lib/validations/: workflow.ts
Front-end/src/store/: accentColorStore.ts
