[tool.poetry]
name = "pytomatiza-backend"
version = "1.0.0"
description = "Pytomatiza+ intelligent automation platform backend"
authors = ["Pytomatiza Team <dev@pytomatiza.com>"]
readme = "README.md"
packages = [{ include = "pytomatiza", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
sqlalchemy = { version = "^2.0.35", extras = ["asyncio"] }
asyncpg = "^0.30.0"
alembic = "^1.13.0"
pydantic = { version = "^2.8.0", extras = ["email"] }
pydantic-settings = "^2.4.0"
redis = "^5.0.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
bcrypt = "^4.2.0"
resend = "*"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
sentry-sdk = { version = "^2.12.0", extras = ["fastapi", "sqlalchemy"] }
prometheus-client = "^0.20.0"
authlib = "^1.3.0"
slowapi = "^0.1.9"
structlog = "^24.4.0"

# AI / LLM providers
google-generativeai = "^0.8.0"
crewai = "^0.100.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
openai = "^1.50.0"

prometheus-fastapi-instrumentator = "^7.1.0"
boto3 = "^1.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.6.0"
mypy = "^1.11.0"
types-redis = "^4.6.0"
types-passlib = "^1.7.7"
types-python-jose = "^3.3.4"
boto3-stubs = { version = "*", extras = ["s3", "lambda", "sns", "logs"] }
mypy-boto3-s3 = "*"
mypy-boto3-lambda = "*"
mypy-boto3-sns = "*"
mypy-boto3-logs = "*"
pyright = "^1.1.409"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking-imports
]
ignore = ["E501"]  # line too long — handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["pytomatiza"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "crewai.*",
    "langchain.*",
    "langchain_openai.*",
    "langchain_community.*",
    "resend.*",
    "sentry_sdk.*",
    "slowapi.*",
    "prometheus_client.*",
    "bcrypt.*",
    "passlib.*",
    "types_redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
    "slow: mark a test as slow",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"   # não "strict" — evita falsos positivos com Pydantic
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
reportUnknownMemberType = "none"        # suprime o partially unknown do boto3
reportUnknownVariableType = "none"      # suprime variáveis derivadas de boto3
reportUnknownArgumentType = "none"      # suprime argumentos derivados de boto3

